@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="plugin.video.deccandelight"
-version="1.1.5"
+version="1.1.6"
 name="Deccan Delight"
 provider-name="Gujal">
 <requires>
@@ -19,7 +19,6 @@ provider-name="Gujal">
 	<platform>all</platform>
 	<website>https://forums.tvaddons.ag/addon-releases/49105-deccan-delight-indian-entertainment.html</website>
 	<disclaimer>This addon scrapes content from various websites around the Internet and is not liable for any content hosted on those sites</disclaimer>
-	<news>[B]Version 1.1.5 - 21 Mar 2017[/B]
-- OZee new scraper</news>
+	<news>[B]Updated 24 Mar 2017[/B]</news>
 </extension>
 </addon>
