@@ -1,3 +1,8 @@
+[B]Version 1.1.6 - 24 Mar 2017[/B]
+- Tamil Rasigan new scraper
+- Yodesi fixes
+- Tamilgun fix
+
 [B]Version 1.1.5 - 21 Mar 2017[/B]
 - OZee new scraper
 
